service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-devops-service
  namespace: darshandimpu-dev
spec:
  selector:
    app: spring-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007  # Specific port for external access
  type: NodePort
